--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.wrapper{
+  padding-top: 5rem;
+  padding-top: 5rem;
+  margin: 0 auto;
+  width: 700px;
+}
+
+.done{
+  text-decoration: line-through;
+}
